--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tippyjs/react": "^4.2.6",
     "bootstrap": "^5.2.0",
     "concurrently": "^7.3.0",
     "dotenv": "^16.0.1",
@@ -17,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.8",
     "web-vitals": "^2.1.4"
   },
