--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-bootstrap": "^2.5.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-tippy": "^1.4.0",
     "react-toastify": "^9.0.8",
+    "sweetalert2": "^11.4.26",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
